# project---F3

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  setup_colab.sh
configs/agent/: prompt_only.yaml  rl_refiner.yaml
configs/env/: miniwob.yaml
configs/train/: ppo.yaml
notebooks/: colab_run.ipynb
paper/: report_template.md
scripts/: 00_smoke_test.py  01_collect_bc_traces.py  02_train_bc.py  03_train_ppo.py  04_eval.py  05_perturb_eval.py  06_ablations.py  07_oracle_topk.py  08_plots.py  09_record_trajectories.py  10_fill_report.py
src/rlwa/: __init__.py
src/rlwa/agents/: __init__.py  action_space.py  prompt_only_agent.py  random_agent.py  reflective_agent.py  rl_refiner_agent.py
src/rlwa/demo/: live_demo.py
src/rlwa/envs/: __init__.py  task_registry.py  wrappers.py
src/rlwa/eval/: metrics.py  perturb.py  recorder.py  runner.py
src/rlwa/obs/: __init__.py  axtree_prune.py  encoders.py  som.py
src/rlwa/planners/: __init__.py  async_gemini.py  base.py  gemini_planner.py  prompts.py
src/rlwa/rl/: bc.py  buffer.py  featurize.py  policy.py  ppo.py
src/rlwa/utils/: logging.py  schemas.py
tests/: test_checkpoint.py  test_metrics.py  test_schemas.py
